All events listed

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h1>List of all events</h1>
         {% for item in events %}
         <div>
-            <p>{{ item.date }} {{ item.name_of_event }} {{ item.number_of_guests }} {{ item.room_location }} {{ item.discription }} 
+            <p>{{ item.date }} {{ item.name_of_event }} {{ item.number_of_guest }} {{ item.room_location }} {{ item.description }} 
             </b> </p>
         </div>
         
