All events listed and base html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,11 @@
-<html>
-    <head>
-        <title>{{ title }}</title>
+{% extends "base.html" %}
 
-
-
-
-
-    </head>
-    <body>
-        <h1>List of all events</h1>
+{% block events %}
+     <h1>List of all events</h1>
         {% for item in events %}
         <div>
             <p>{{ item.date }} {{ item.name_of_event }} {{ item.number_of_guest }} {{ item.room_location }} {{ item.description }} 
             </b> </p>
         </div>
-        
-
         {% endfor %}
-    </body>
-
-
-</html>
+{% endblock %}
